# mlops_reco_movies

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: build_mkdocs.yml  c1.yml
.github/workflows/: build_mkdocs.yml
airflow/: .env.example  data.dvc  docker-compose.yaml  init-multiple-databases.sh
airflow/config/: airflow.cfg
airflow/dags/: create_tables_raw.py  create_tables_to_db.py  get_movielens_dataset.py  insert_movielens_to_db.py  movielens_data_preprocessing.py  movielens_model_evaluation.py  movielens_model_training.py  postgres_create_table.py
airflow/dags/sql/: create_table_genome_scores_raw.sql  create_table_genome_tags_raw.sql  create_table_links.sql  create_table_links_raw.sql  create_table_movies.sql  create_table_movies_raw.sql  create_table_ratings.sql
airflow/docker/get_movielens_datasets/: Dockerfile  get_movielens_datasets.py
airflow/docker/preprocessing_datasets/: Dockerfile  links.py  (+4 more)
configs/: conda_env.yml
docs/: a-venir.md  index.md  mkdocs.yml
docs/docs/: index.md
docs/introduction/: contexte.md  methodologie.md  objectifs.md
docs/journal/: jour-1.md
docs/stylesheets/: extra.css
mlops_reco_movies/: __init__.py  dataset.py  features.py  plots.py
mlops_reco_movies/modeling/: predict.py  train.py
notebooks/: 1_exploration_data.ipynb  2_pretraitement_movies.ipynb  3_pretraitement_ratings.ipynb  4_pretraitement_links.ipynb  5_pretraitement_genome_tags.ipynb  5_pretraitement_genomes_scores.ipynb  6_pretraitement_genomes_scores.ipynb  7_lightFM_model.ipynb
(+1 files in other folders)
