[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_reco_movies"
version = "0.0.1"
description = "Cr\u00e9ation d'un syst\u00e8me de recommandation de films"
authors = [
  { name = "Antoine PELAMOURGUES" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["mlops_reco_movies"]
force_sort_within_sections = true


